issue #8: align status checkboxes and images on map view status control

--- a/webcontent/css/page/map/ControlView.css
+++ b/webcontent/css/page/map/ControlView.css
@@ -28,7 +28,7 @@ label.control {
 
 .status-checkbox-panel img {
     vertical-align: top;
-    margin-right: .5em;
+    margin-right: .3em;
 }
 
 .status-checkbox-panel div {
